# TinyMD

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: editor-architecture.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ArticleToc.tsx  FileTree.tsx  MilkdownEditor.tsx  TabsBar.tsx  milkdownMenuOverrides.css
src/lib/: attachmentImportState.ts  customBlockHandle.ts  milkdownAttachmentBlock.ts  normalizeTaskListMarkdown.ts  toc.ts
