[package]
name = "rust-milkdown"
version = "1.0.0-beat.1"
description = "A Tauri Markdown editor powered by Milkdown"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
